--- a/graphic-editor.html
+++ b/graphic-editor.html
@@ -13,7 +13,7 @@
 
 
   <h1>Draw Rectangles on Mouse Move in SVG</h1>
-  <svg id="my-svg" width="700" height="450" style="background-color: blue; margin-top:0px; margin-left:0px"></svg>
+  <svg id="my-svg" width="700" height="450" style="background-color: rgb(255, 217, 0); margin-top:0px; margin-left:0px"></svg>
 
  
   </div>
