--- a/graphic-editor.html
+++ b/graphic-editor.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Graphic Editor 1</title>
+  <title>Online Graphic Editor </title>
   <meta name="description" content="This is free online Graphic Editor. You can create basic shapes in this graphic editor and also move shapes.">
 </head>
 <body>
